<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccueilAdmin">

    <TextView
        android:id="@+id/texte_titre"
        android:layout_width="211dp"
        android:layout_height="36dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/dm_sans"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_deco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d_connection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_new_user"
        app:layout_constraintVertical_bias="0.633" />

    <Button
        android:id="@+id/button_new_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_new_delivery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texte_titre"
        app:layout_constraintVertical_bias="0.133" />

    <Button
        android:id="@+id/button_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_client"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_delivery_management"
        app:layout_constraintTop_toBottomOf="@+id/button_delivery_management"
        app:layout_constraintVertical_bias="0.201" />

    <Button
        android:id="@+id/button_delivery_management"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_management"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_new_delivery"
        app:layout_constraintTop_toBottomOf="@+id/button_new_delivery"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/button_user_management"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_management"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_new_delivery"
        app:layout_constraintTop_toBottomOf="@+id/button_new_user"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>